sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: not found: value i
		if (plusPetit(i,i+1) & plusPetit(i-1,i)){
                              ^AlgGnomeSort:7: error: not found: value i
			if (i!=getNombreValeurs()-1){
                            ^AlgGnomeSort:8: error: not found: value i
			i==i+1
                        ^AlgGnomeSort:12: error: not found: value i
		else { echange(i-1,i+1)
                               ^AlgGnomeSort:13: error: not found: value i
		       if (i!=debut){
                           ^AlgGnomeSort:14: error: not found: value i
		       i==i-1	
                       ^AlgGnomeSort:16: error: not found: value i
		       else i==i+1
                            ^