sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	val debut=0
	val fin=false
	do{
		if (plusPetit(i,i+1) & plusPetit(i-1,i)){
			if (i!=getNombreValeurs()-1){
			i==i+1
			}
			else return
		}
		else { echange(i-1,i+1)
		       if (i!=debut){
		       i==i-1	
		       }
		       else i==i+1
		       
	     }
	}while(fin)
}
